--- a/app/src/main/res/layout/activity_start_quiz.xml
+++ b/app/src/main/res/layout/activity_start_quiz.xml
@@ -20,36 +20,45 @@
         android:layout_below="@+id/welcomeUser"
         android:text="Question" />
 
-    <RadioButton
-        android:id="@+id/radiobtnOne"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RadioGroup
         android:layout_marginTop="50dp"
+        android:id="@+id/choices"
+        android:layout_marginLeft="10dp"
         android:layout_below="@+id/starQuizQuestion"
-        android:text="Choice 1" />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
-    <RadioButton
-        android:id="@+id/radiobtnTwo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/radiobtnOne"
-        android:text="Choice 2" />
+        <RadioButton
+            android:id="@+id/radiobtnOne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_below="@+id/starQuizQuestion"
+            android:text="Choice 1" />
 
-    <RadioButton
-        android:id="@+id/radiobtnThree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/radiobtnTwo"
-        android:text="Choice 3" />
+        <RadioButton
+            android:id="@+id/radiobtnTwo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/radiobtnOne"
+            android:text="Choice 2" />
+
+        <RadioButton
+            android:id="@+id/radiobtnThree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/radiobtnTwo"
+            android:text="Choice 3" />
+    </RadioGroup>
 
     <Button
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_below="@+id/radiobtnThree"
+        android:layout_below="@+id/choices"
         android:layout_centerHorizontal="true"
         android:text="NEXT" />
 
