--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
         android:id="@+id/buttonReg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ragister"
+        android:text="Register"
         android:textColor="#ffffff"
         android:background="@color/colorPrimaryDark"/>
 
