--- a/app/src/main/res/layout/activity_start_quiz.xml
+++ b/app/src/main/res/layout/activity_start_quiz.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
+        android:textSize="25sp"
         android:text="Welcome: " />
 
     <TextView
@@ -16,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/welcomeUser"
         android:text="Question" />
 
@@ -32,24 +33,27 @@
             android:id="@+id/radiobtnOne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:layout_below="@+id/starQuizQuestion"
+            android:layout_marginTop="50dp"
+            android:minHeight="48dp"
             android:text="Choice 1" />
 
         <RadioButton
             android:id="@+id/radiobtnTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_below="@+id/radiobtnOne"
+            android:layout_marginTop="20dp"
+            android:minHeight="48dp"
             android:text="Choice 2" />
 
         <RadioButton
             android:id="@+id/radiobtnThree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_below="@+id/radiobtnTwo"
+            android:layout_marginTop="20dp"
+            android:minHeight="48dp"
             android:text="Choice 3" />
     </RadioGroup>
 
