--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/textViewResult"
@@ -22,19 +23,22 @@
         android:layout_weight="1"
         android:layout_below="@id/textViewResult"
         android:layout_marginTop="20dp"
-        android:textSize="30dp"
+        android:textSize="35dp"
+        android:textColor="@color/blue_400"
+        android:textStyle="bold"
         android:text="TextView" />
 
     <Button
         android:id="@+id/btnResultDone"
-        android:layout_width="1in"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
         android:layout_below="@id/textViewScore"
-
-        android:text="DONE" />
+        android:layout_marginTop="241dp"
+        android:layout_weight="1"
+        android:background="@color/colorPrimaryDark"
+        android:textSize="20dp"
+        android:text="DONE"
+        android:textColor="#ffffff" />
 
 
 </RelativeLayout>
