--- a/app/src/main/res/layout/activity_start_quiz.xml
+++ b/app/src/main/res/layout/activity_start_quiz.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/welcomeUser"
@@ -9,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:text="Welcome: " />
 
     <TextView
@@ -19,6 +20,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/welcomeUser"
+        android:textSize="25dp"
         android:text="Question" />
 
     <RadioGroup
@@ -59,11 +61,14 @@
 
     <Button
         android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_below="@+id/choices"
         android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:background="@color/colorPrimaryDark"
         android:text="NEXT" />
 
 </RelativeLayout>
