--- a/app/src/main/res/layout/activity_ragister.xml
+++ b/app/src/main/res/layout/activity_ragister.xml
@@ -77,7 +77,7 @@
             android:text="Password" />
 
         <EditText
-            android:id="@+id/txtPassword"
+            android:id="@+id/txtPassword2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textPassword" />
